# github-client-rs

./: Cargo.toml  README.md
github-app/: Cargo.toml
github-app/src/: args.rs  main.rs
github-lib/: Cargo.toml
github-lib/src/: error.rs  github_client.rs  lib.rs  link_urls.rs  logging_middleware.rs  result.rs
github-lib/src/object_model/: mod.rs  owner.rs  repo.rs
