[package]
name = "github-app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
clap = { version = "4.3.2", features = ["derive", "env"] }
colored = "2.0.0"
github-lib = { path = "../github-lib" }
tokio = { version = "1.28.2", features = ["full"] }
