[package]
name = "github-app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
clap = { version = "4.5.11", features = ["derive", "env"] }
colored = "2.1.0"
env_logger = "0.11.5"
github-lib = { path = "../github-lib" }
tokio = { version = "1.39.1", features = ["full"] }
