[package]
name = "github-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.94", features = ["backtrace"] }
async-trait = "0.1.83"
futures-util = "0.3.31"
http = "1.2.0"
log = "0.4.22"
reqwest = { version = "0.12.9", features = ["json"] }
reqwest-middleware = "0.4.0"
serde = { version = "1.0.216", features = ["derive"] }
thiserror = "2.0.7"
